Fixed code smells from sonarqube, added tests for the service methods I added as well as tests for the add-team post